# Diskette

./: .gitignore  Cargo.toml  README.md
.github/workflows/: nightly.yml
data/: app.diskette.Diskette.desktop  app.diskette.Diskette.metainfo.xml  diskette.css
flatpak/: README.md  app.diskette.Diskette.yml  apply_extra.sh  cargo-sources.json  update-source-archive.sh
i18n/: en.tsv  ru.tsv
packaging/: Containerfile.deb  Containerfile.rpm  README.md  podman-build-deb.sh  podman-build-rpm.sh
src/: actions.rs  app.rs  i18n.rs  main.rs  settings.rs  window.rs
src/components/: buttons.rs  command_output.rs  forms.rs  header_bar.rs  layout.rs  mod.rs  output_buffer.rs  picker.rs  style.rs
src/components/yandex_disk/: command_actions.rs  mod.rs  option_controls.rs  setup_controls.rs  sync_folder.rs
src/models/yandex_disk/: command_line.rs  command_options.rs  command_output.rs  command_progress.rs  command_request.rs  mod.rs  setup.rs  setup_storage.rs  ui_event.rs
src/pages/: advanced.rs  mod.rs  overview.rs  setup.rs  sharing.rs  welcome.rs
src/services/: mod.rs
src/services/yandex_disk/: foreground_daemon.rs  mod.rs  runner.rs  token_stream.rs
src/utils/: desktop.rs  mod.rs  paths.rs
